--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -3,131 +3,20 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--To-do List-->
-        <scene sceneID="9GB-kY-KaZ">
+        <!--DoneList-->
+        <scene sceneID="sph-Zp-fep">
             <objects>
-                <tableViewController storyboardIdentifier="TodoList" id="qvi-su-rvd" customClass="TableViewController" customModule="TodoList" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="zJr-cu-b18">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="VbC-14-IRD" customClass="TodoCell" customModule="TodoList" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VbC-14-IRD" id="Xfg-8i-ToT" customClass="TodoCell" customModule="TodoList" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYN-g5-win">
-                                            <rect key="frame" x="347" y="4" width="38" height="35"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <color key="tintColor" systemColor="systemPurpleColor"/>
-                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                            <state key="normal">
-                                                <imageReference key="image" image="circle" catalog="system" symbolScale="default"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="checkBtn:" destination="qvi-su-rvd" eventType="touchUpInside" id="Nro-3K-c65"/>
-                                            </connections>
-                                        </button>
-                                    </subviews>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="checkBtn" destination="RYN-g5-win" id="G7R-Op-pY8"/>
-                                    <segue destination="FPd-xi-Cvh" kind="show" identifier="sgDetail" id="VJY-Ir-aoB"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="qvi-su-rvd" id="xJ8-f9-Waj"/>
-                            <outlet property="delegate" destination="qvi-su-rvd" id="Pnm-Sa-23l"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="To-do List" id="9S4-EE-Bl9">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="VUD-75-LRX">
-                            <connections>
-                                <action selector="plusBtn:" destination="qvi-su-rvd" id="unQ-tZ-q4p"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="tvListView" destination="zJr-cu-b18" id="OGk-q6-GBW"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QTD-LF-IgT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardIdentifier="DoneList" storyboardName="DoneList" referencedIdentifier="DoneList" id="vag-mq-Qea" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="VRZ-Vt-tyy"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EjF-1A-cq0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="667.93893129770993" y="93.661971830985919"/>
-        </scene>
-        <!--Done-List-->
-        <scene sceneID="ugZ-KC-XwI">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="p4z-Lo-NSk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="fLb-cv-PoZ" customClass="FinishViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8N6-xY-rxr">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kPn-ul-IIa">
-                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="woq-qO-VLo">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="woq-qO-VLo" id="VbC-j5-LRJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="yEF-M8-TrI"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Done-List" id="cuf-Zw-Zpt"/>
-                    <connections>
-                        <outlet property="tableView" destination="kPn-ul-IIa" id="Q21-Gd-5BF"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="310.68702290076334" y="832.3943661971831"/>
-        </scene>
-        <!--Detail View-->
-        <scene sceneID="9yj-9v-0f6">
-            <objects>
-                <viewController id="FPd-xi-Cvh" customClass="DetailViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dUD-yh-9y0">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKb-1m-kXq">
-                                <rect key="frame" x="16" y="210" width="361" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="g56-3o-Bqf"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Detail View" id="pCZ-7U-7gp"/>
-                    <connections>
-                        <outlet property="detailItem" destination="aKb-1m-kXq" id="i2i-JD-lFE"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mQ5-OX-Iqv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1543" y="94"/>
+            <point key="canvasLocation" x="-206" y="606"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="XDW-I6-npS">
@@ -144,7 +33,7 @@
                                 <buttonConfiguration key="configuration" style="plain" title="완료한 목록 보기"/>
                                 <connections>
                                     <action selector="viewDoneList:" destination="9rr-Tr-s6a" eventType="touchUpInside" id="WYx-Md-jtR"/>
-                                    <segue destination="fLb-cv-PoZ" kind="push" id="urg-rb-HaP"/>
+                                    <segue destination="vag-mq-Qea" kind="push" id="veR-JO-Il2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HPw-Cz-Aen">
@@ -153,7 +42,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="To-do List 추가하기"/>
                                 <connections>
-                                    <segue destination="qvi-su-rvd" kind="push" id="qrc-DG-LmL"/>
+                                    <segue destination="Kra-Qh-wsQ" kind="push" id="TtU-sW-gRW"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -188,14 +77,20 @@
             </objects>
             <point key="canvasLocation" x="-1085" y="94"/>
         </scene>
+        <!--TodoList-->
+        <scene sceneID="9P6-ml-gdD">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="TodoList" storyboardName="TodoList" referencedIdentifier="TodoList" id="Kra-Qh-wsQ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" customizationIdentifier="" id="f6J-hE-Roa"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jwg-oG-B46" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="482" y="94"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
