--- a/TodoList/Home/Base.lproj/Main.storyboard
+++ b/TodoList/Home/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBs-aH-0OT">
-                                <rect key="frame" x="129" y="385" width="136" height="35"/>
+                                <rect key="frame" x="128" y="345" width="136" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="완료한 목록 보기"/>
@@ -49,6 +49,15 @@
                                 <rect key="frame" x="77" y="103" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Qe-Vz-zez">
+                                <rect key="frame" x="123" y="388" width="146" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="카테고리 추가하기"/>
+                                <connections>
+                                    <action selector="AddCategory:" destination="9rr-Tr-s6a" eventType="touchUpInside" id="dg8-hE-Eex"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ctd-cU-uxx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -62,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0BS-AV-cuk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-204" y="94"/>
+            <point key="canvasLocation" x="-205.34351145038167" y="93.661971830985919"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gc6-MH-Xwh">
